[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Images/WorldSwitcher.png" type="Texture" id=1]
[ext_resource path="res://Scripts/WorldSwitcher/WorldSwitcher.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/SFX/UseWorldSwitcher.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 13 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 12, 0, 12, 13 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 12, 13 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 12, 13 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 13, 12, 13 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 12, 13, 12, 13 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 24, 13, 12, 13 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 36, 13, 12, 13 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.318182 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=11]
lifetime_randomness = 1.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 180.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 13 )
color = Color( 0.796078, 0.670588, 0.909804, 1 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 9, 9 )

[node name="WorldSwitcher" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
playing = true

[node name="Particles" type="Particles2D" parent="."]
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
process_material = SubResource( 11 )

[node name="Area" type="Area2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="Area"]
shape = SubResource( 10 )

[node name="DeleteTimer" type="Timer" parent="."]
one_shot = true

[node name="UseAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="DeleteTimer" to="." method="_on_DeleteTimer_timeout"]
